--- a/Dockerfile-local
+++ b/Dockerfile-local
@@ -12,9 +12,11 @@ RUN mkdir -p ~/.gradle \
     && chmod 750 ./gradlew \
     && ./gradlew --version;
 
-# RUN cd cas-overlay && ./gradlew clean build --parallel --no-daemon;
-# It is 10-30 times faster to build with IDE such as Intelliji locally
-COPY ./build cas-overlay/build/
+RUN cd cas-overlay && ./gradlew clean build --parallel --no-daemon;
+# The build process above in docker may takes a long time depending on your local resources. This OK if you only use
+# CAS by building it once. For local development, building with your IDE such as IntelliJ is much faster. Afterwards,
+# simply comment out the above "RUN" command and enable the following "COPY" one.
+# COPY ./build cas-overlay/build/
 
 FROM adoptopenjdk/openjdk11:alpine-jre AS cas
 
@@ -30,13 +32,13 @@ RUN cd / \
 COPY etc/cas/ /etc/cas/
 
 COPY etc/cas/config/ /etc/cas/config/
-# Use local cas.properties
+# Use "cas-local.properties" for local development
 RUN rm etc/cas/config/cas.properties
 COPY etc/cas/config/local/cas-local.properties etc/cas/config/cas.properties
 RUN rm -r etc/cas/config/local
 
 COPY etc/cas/services/ /etc/cas/services/
-# Use local services
+# Use registered services defined in "local/services" for local development
 COPY etc/cas/services/local/* /etc/cas/services/
 RUN rm -r etc/cas/services/local/
 
